--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nume | Link-uri</title>
+  <title>Social Media Links</title>
   <meta name="description" content="Toate link-urile mele într-un singur loc." />
   <meta property="og:title" content="Nume | Link-uri" />
   <meta property="og:description" content="Toate link-urile mele într-un singur loc." />
@@ -79,4 +79,5 @@
     </div>
   </noscript>
 </body>
+
 </html>
